# ML_DL_TimeSeries_Project

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: Projet ML-Sorbonne_MOSEF.docx
notebook/: TimeSeries_Presentation.ipynb  deleted_codes.ipynb  modele_v1.ipynb  washington_weather_2013_Q1.csv
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: utils.py
